// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots Markdown Markdown with props 1`] = `
<div
  class="h-full"
>
  <div
    class="text-gray-600"
  >
    
  En cours d'implémentation.

  </div>
</div>
`;

exports[`storyshots Markdown Markdown without props 1`] = `
<div
  class="h-full"
>
  <!---->
</div>
`;
